// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow renders a workflow component 1`] = `
Array [
  <label
    htmlFor="state-select"
  >
    State
  </label>,
  <div
    className="Select has-value Select--single"
  >
    <input
      disabled={false}
      name="state-select"
      type="hidden"
      value="private"
    />
    <div
      className="Select-control"
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="Select-multi-value-wrapper"
        id="react-select-3--value"
      >
        <div
          className="Select-value"
        >
          <span
            aria-selected="true"
            className="Select-value-label"
            id="react-select-3--value-item"
            role="option"
          >
            <span
              style={
                Object {
                  "backgroundColor": "#ed4033",
                  "borderRadius": "50%",
                  "content": " ",
                  "display": "inline-block",
                  "height": "10px",
                  "marginLeft": "10px",
                  "marginRight": "10px",
                  "width": "10px",
                }
              }
            />
            <span
              className="Select-value-label"
            >
              Private
            </span>
          </span>
        </div>
        <div
          aria-activedescendant="react-select-3--value"
          aria-disabled="false"
          aria-expanded={false}
          aria-owns=""
          className="Select-input"
          onBlur={[Function]}
          onFocus={[Function]}
          role="combobox"
          style={
            Object {
              "border": 0,
              "display": "inline-block",
              "width": 1,
            }
          }
          tabIndex={0}
        />
      </span>
      <span
        className="Select-arrow-zone"
        onMouseDown={[Function]}
      >
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "currentColor",
              "height": "24px",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </span>
    </div>
  </div>,
]
`;

exports[`Workflow renders an empty workflow component 1`] = `
Array [
  <label
    htmlFor="state-select"
  >
    State
  </label>,
  <div
    className="Select has-value Select--single"
  >
    <input
      disabled={false}
      name="state-select"
      type="hidden"
      value="public"
    />
    <div
      className="Select-control"
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="Select-multi-value-wrapper"
        id="react-select-2--value"
      >
        <div
          className="Select-value"
        >
          <span
            aria-selected="true"
            className="Select-value-label"
            id="react-select-2--value-item"
            role="option"
          >
            <span
              style={
                Object {
                  "backgroundColor": "#007bc1",
                  "borderRadius": "50%",
                  "content": " ",
                  "display": "inline-block",
                  "height": "10px",
                  "marginLeft": "10px",
                  "marginRight": "10px",
                  "width": "10px",
                }
              }
            />
            <span
              className="Select-value-label"
            >
              Public
            </span>
          </span>
        </div>
        <div
          aria-activedescendant="react-select-2--value"
          aria-disabled="false"
          aria-expanded={false}
          aria-owns=""
          className="Select-input"
          onBlur={[Function]}
          onFocus={[Function]}
          role="combobox"
          style={
            Object {
              "border": 0,
              "display": "inline-block",
              "width": 1,
            }
          }
          tabIndex={0}
        />
      </span>
      <span
        className="Select-arrow-zone"
        onMouseDown={[Function]}
      >
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "currentColor",
              "height": "24px",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </span>
    </div>
  </div>,
]
`;
